# HtsEngine_Oboe

Oboe/app/: CMakeLists.txt  build.gradle
Oboe/app/src/androidTest/java/com/admin/oboe/: ExampleInstrumentedTest.java
Oboe/app/src/main/: AndroidManifest.xml
Oboe/app/src/main/cpp/: HTS_Xlabel.c  HTS_audio.c  HTS_engine.h  HTS_engine1.c  HTS_engine2.h  HTS_gstream.c  HTS_hidden.h  HTS_misc.c  HTS_model.c  HTS_orthogonal_expansion.c  HTS_orthogonal_expansion.h  HTS_pstream.c  HTS_pstream.h  HTS_sstream.c  HTS_vocoder.c  LF0NormFct.h  LOG.h  PlayAudioEngine.cpp  PlayAudioEngine.h  SineGenerator.cpp  SineGenerator.h  hts_Engine.c  jni_bridge.cpp  oec.c  oec.h
Oboe/app/src/main/java/com/admin/oboe/: MainActivity.java  PlaybackEngine.java
Oboe/app/src/main/res/layout/: activity_main.xml
Oboe/app/src/main/res/values/: strings.xml
Oboe/app/src/test/java/com/admin/oboe/: ExampleUnitTest.java
Oboe/audio-device/: local.properties
Oboe/debug-utils/: local.properties
test/java/com/example/user/htsoboe/: ExampleUnitTest.java
